--- a/samples/Sample.XamarinAndroid.Bindings.Library/packages.config
+++ b/samples/Sample.XamarinAndroid.Bindings.Library/packages.config
@@ -1,4 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages>
-  <package id="HolisticWare.Xamarin.Tools.Bindings.XamarinAndroid.ApiXmlSpitter" version="0.0.1-alpha-20190313184518" targetFramework="monoandroid90" />
-</packages>
+<packages />
