--- a/samples/Sample.XamarinAndroid.Bindings.Library/Sample.XamarinAndroid.Bindings.Library.csproj
+++ b/samples/Sample.XamarinAndroid.Bindings.Library/Sample.XamarinAndroid.Bindings.Library.csproj
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\HolisticWare.Xamarin.Tools.Bindings.XamarinAndroid.ApiXmlSpitter.0.0.2\build\HolisticWare.Xamarin.Tools.Bindings.XamarinAndroid.ApiXmlSpitter.props" Condition="Exists('..\packages\HolisticWare.Xamarin.Tools.Bindings.XamarinAndroid.ApiXmlSpitter.0.0.2\build\HolisticWare.Xamarin.Tools.Bindings.XamarinAndroid.ApiXmlSpitter.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -95,4 +96,5 @@
         <RunCLIJavaDecompilerBytecodeViewerSmali>true</RunCLIJavaDecompilerBytecodeViewerSmali>                
     </PropertyGroup>
     
+    <Import Project="..\packages\HolisticWare.Xamarin.Tools.Bindings.XamarinAndroid.ApiXmlSpitter.0.0.2\build\HolisticWare.Xamarin.Tools.Bindings.XamarinAndroid.ApiXmlSpitter.targets" Condition="Exists('..\packages\HolisticWare.Xamarin.Tools.Bindings.XamarinAndroid.ApiXmlSpitter.0.0.2\build\HolisticWare.Xamarin.Tools.Bindings.XamarinAndroid.ApiXmlSpitter.targets')" />
 </Project>
