--- a/samples/Sample.XamarinAndroid.Bindings.Library/packages.config
+++ b/samples/Sample.XamarinAndroid.Bindings.Library/packages.config
@@ -1,2 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages />
+<packages>
+  <package id="HolisticWare.Xamarin.Tools.Bindings.XamarinAndroid.ApiXmlSpitter" version="0.0.2" targetFramework="monoandroid90" />
+</packages>
