--- a/source/HolisticWare.Xamarin.Tools.Bindings.XamarinAndroid.ApiXmlSpitter/HolisticWare.Xamarin.Tools.Bindings.XamarinAndroid.ApiXmlSpitter.csproj
+++ b/source/HolisticWare.Xamarin.Tools.Bindings.XamarinAndroid.ApiXmlSpitter/HolisticWare.Xamarin.Tools.Bindings.XamarinAndroid.ApiXmlSpitter.csproj
@@ -32,7 +32,7 @@
         <!-- 
         put the package output into a nuget test folder 
         -->
-        <PackageOutputPath>$(HOME)/nuget-local</PackageOutputPath>
+        <PackageOutputPath>../../output</PackageOutputPath>
         
         <!-- 
         nuget packaging
@@ -81,9 +81,9 @@
       from ending up in the NuGet package's list of dependencies.
      -->
     <PackageReference Include="NETStandard.Library" Version="2.0.3" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.Build.Framework" Version="15.8.166" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.Build.Tasks.Core" Version="15.8.166" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="15.8.166" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Build.Framework" Version="16.6.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Build.Tasks.Core" Version="16.6.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.6.0" PrivateAssets="All" />
     <!-- 
         marks all packages as 'local only' so they don't end up in the nuspec 
     -->
